Spicing things up a bit

--- a/index.html
+++ b/index.html
@@ -53,43 +53,43 @@
         </div>
         <div class="row heading">
             <div class="span12">
-                <h1>Bitstarter Title</h1>
+                <h1>Titles are for winners</h1>
             </div>
         </div>
         <div class="row subheading">
             <div class="span12">
-                <p class="lead">This is my first bitstarter project.</p>
+                <p class="lead">This is the best bitstarter project.</p>
             </div>
         </div>
         <div class="row pitch">
             <div class="span6 video">
-                Video
+                TOO HOT FOR INTERNET!
             </div>
             <div class="span6">
                 <div class="thermometer">
-                    Thermometer
+                    Hot Hot Hot!
                 </div>
                 <div class="order">
-                    Order
+                    Order now!  Supplies are ... well they don't exist.  Just gonna take your cash honestly
                 </div>
                 <div class="social">
-                    Social
+                    Poke me on facebook.  I'm lonely
                 </div>
             </div>
         </div>
         <div class="row section1">
             <div class="span12">
-                Marketing Section 1
+                Basically it would be really nice if you would buy our stuff 
             </div>
         </div>
         <div class="row section2">
             <div class="span12">
-                Marketing Section 2
+                Maybe pay a little money, get a little something or something something
             </div>
         </div>
         <div class="row faq">
             <div class="span12">
-                FAQ
+                FAQ - Quack
             </div>
         </div>
         <div class="row footer">
