Spacing is dumb

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     Hot Hot Hot!
                 </div>
                 <div class="order">
-                    Order now!  Supplies are ... well they don't exist.  Just gonna take your cash honestly
+                    Order now!  Supplies are ... well they don't exist.  
                 </div>
                 <div class="social">
                     Poke me on facebook.  I'm lonely
