index.html restored. I should do this through git instead

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         p.lead {
             padding-top: 15px;
         }
-        .navigation, .pitch, .section1, .faq, .footer {
+        .navigation, .pitch, .section1, .section2, .faq, .footer {
             padding: 10px 0px 10px 0px;
         }
         .video, .thermometer, .order, .social {
@@ -80,6 +80,11 @@
         <div class="row section1">
             <div class="span12">
                 Basically it would be really nice if you would buy our stuff 
+            </div>
+        </div>
+        <div class="row section2">
+            <div class="span12">
+                Maybe pay a little money, get a little something or something something
             </div>
         </div>
         <div class="row faq">
