Making it more awesome

--- a/index.html
+++ b/index.html
@@ -155,17 +155,17 @@
                         <div class="span4">
                             <!-- linediv-l and linediv-r give dividing lines that look different in horizontal and vertical layouts, illustrating media queries. -->
                             <div class="linediv-l">
-                            <h3>1000</h3> <p>backers</p>
+                            <h3>0 :(</h3> <p>backers</p>
                             </div>
                         </div>
                         <div class="span4">
                             <div class="linediv-c">
-                                <h3>$6000</h3> <p>of $10,000</p>
+                                <h3>$0 :(</h3> <p>of $11 billion and a button</p>
                             </div>
                         </div>
                         <div class="span4">
                             <div class="linediv-r">
-                                <h3>10</h3> <p>days left</p>
+                                <h3>37</h3> <p>days left</p>
                             </div>
                         </div>
                     </div>
@@ -174,8 +174,8 @@
                     <!-- Boostrap progress bar -->
                     <!-- http://twitter.github.io/bootstrap/components.html#progress -->
                     <div class="thermometer progress active">
-                        <div class="bar bar-success" style="width:60%;"></div>
-                        <div class="bar bar-warning" style="width:40%;"></div>
+                        <div class="bar bar-success" style="width:69%;"></div>
+                        <div class="bar bar-warning" style="width:31%;"></div>
                     </div>
                 </div>
                 <div class="span6 offset3 order">
@@ -202,7 +202,7 @@
             </div>
             <div class="span5 copy">
                 <p>
-                    Guys sometimes you just gotta randomly put words in.  Now is then and also now.
+                    There may or may not be as we speak a secret war being fought over the future of the Bahamas.  Why do bad things happen to good people?  Why do good people do bad things?  I mean over and over again to the point where you really question if they are good people?  And how exactly is it possible for the human body to store that much urine?   
                 </p>
             </div>
         </div>
@@ -210,7 +210,7 @@
         <div class="row-fluid section2">
             <div class="span5 offset1 copy copy-right">
                 <p>
-                    Blah blah blah.  Sometimes you feel like a nut.  Sometimes you feel like bacon.
+                   Donuts are good people.  They never flood your basement for a "prank" and then try to fill it with surprisingly diverse fish populations.
                 </p>
             </div>
             <div class="span5 asset">
@@ -229,12 +229,12 @@
                         <div class="accordion-heading">
                             <a class="accordion-toggle" data-toggle="collapse" 
                             data-parent="#accordion2" href="#collapseOne">
-                                What does FAQ stand for?
+                                Why should I eat a cupcake when I have a perfectly good sandwich?
                             </a>
                         </div>
                         <div id="collapseOne" class="accordion-body collapse">
                             <div class="accordion-inner">
-                                Frequencly asked question.
+                                Hey I'll take a sandwich man if that's what you are offering.
                             </div>
                         </div>
                     </div>
@@ -242,12 +242,12 @@
                         <div class="accordion-heading">
                             <a class="accordion-toggle" data-toggle="collapse" 
                             data-parent="#accordion2" href="#collapseTwo">
-                                What's a Frequently Asked Question?
+                                Once we save the world who gets the good chair?
                             </a>
                         </div>
                         <div id="collapseTwo" class="accordion-body collapse">
                             <div class="accordion-inner">
-                                Seriously?
+                                Why do you click things when you don't really care about the answers? 
                             </div>
                         </div>
                     </div>
